<resources>
    <string name="app_name">SumeFly</string>
    <string name="login">Login</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="start_recording">Comienzo de grabacion</string>
    <string name="pause_reording">Grabación pausada</string>
    <string name="stop_recording">Fin de grabación</string>
    <string name="logo">Logo</string>
    <string name="menu">Menu</string>
    <string name="grabar">Grabar</string>
    <string name="grabaciones">Grabaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detalle_audio">Detalle Audio</string>
</resources>